# meche333

./: LICENSE  README.md
hw11/: advanced_processing.py  capture.py  line.py
hw12/: CMakeLists.txt
hw12/pwm/: CMakeLists.txt  pwm.c
hw13/: CMakeLists.txt  old.txt
hw13/MPU6050_i2c/: CMakeLists.txt  MPU6050.c  MPU6050.h  main.c
hw14/: fft.py  fir.py  iir.py  mav.py  samplelists.py
hw16/uart_advanced/: CMakeLists.txt  uart_advanced.c
hw2/: CMakeLists.txt
hw2/blink/: CMakeLists.txt
hw3/: CMakeLists.txt
hw3/print/: CMakeLists.txt  print.c
hw4/: CMakeLists.txt
hw4/mcp4912_spi/: CMakeLists.txt  mcp4912_spi.c
hw5/: CMakeLists.txt
hw5/mcp23008_i2c/: CMakeLists.txt  mcp23008_i2c.c
hw6/: CMakeLists.txt
hw6/ssd1306_i2c/: CMakeLists.txt  main.c
hw7/uart_advanced/: CMakeLists.txt  uart_advanced.c
hw9/: CMakeLists.txt
hw9/uart_advanced/: CMakeLists.txt  uart_advanced.c
